no hover on mobile; fix tests

--- a/static/less/detail.less
+++ b/static/less/detail.less
@@ -16,7 +16,9 @@
 			color: var(--color-text);
 			text-decoration: none;
 
-			&:hover { text-decoration: underline; }
+			@media (hover: hover) {
+				&:hover { text-decoration: underline; }
+			}
 
 			.subscription-icon { margin-right: 8px; }
 		}
