--- a/static/less/list.less
+++ b/static/less/list.less
@@ -25,7 +25,9 @@
 		cursor: pointer;
 		border-bottom: 1px solid var(--color-border);
 
-		&:hover { background-color: var(--color-hover); }
+		@media (hover: hover) {
+			&:hover { background-color: var(--color-hover); }
+		}
 
 		header {
 			.flex-row;
