--- a/static/less/nav.less
+++ b/static/less/nav.less
@@ -90,8 +90,10 @@ nav {
 			color: var(--color-text);
 		}
 
-		&:hover {
-			background-color: var(--color-hover);
+		@media (hover: hover) {
+			&:hover {
+				background-color: var(--color-hover);
+			}
 		}
 	}
 
