--- a/static/less/popup.less
+++ b/static/less/popup.less
@@ -17,8 +17,10 @@
 		font-size: 1.4rem;
 		line-height: 3.6rem;
 
-		&:hover {
-			background: var(--color-hover);
+		@media (hover: hover) {
+			&:hover {
+				background: var(--color-hover);
+			}
 		}
 
 		.icon {
